--- a/a2/public/style.css
+++ b/a2/public/style.css
@@ -100,6 +100,7 @@
     .blink-me-konstantin {
       animation: blinker 3s linear infinite;
       animation-iteration-count: 1;
+      color: #F4628C;
     }
     
     @keyframes blinker {
@@ -127,7 +128,7 @@
     .input_box-konstantin:hover,
     .input_box-konstantin:active {
       outline:0px !important;
-      -webkit-appearance:none;
+      --webkit-appearance:none;
       box-shadow: none !important; 
     }
     #txtDiv-konstantin {
@@ -181,25 +182,26 @@
     .difficulty_box-konstantin {
       display: flex;
       flex-direction: column;
-      background-color: #FFECE2;
+      background-color: white;
       font-weight: 500;
       font-size: 2.0rem;
       margin: auto;
       padding: 2.0rem 1.2rem 1.2rem 1.2rem;
       width: 50%;
       color: #8F8F8F;
-      border-radius: 10px 10px 10px 10px;  
+      border: 5px solid #E9E9E9;
+      border-radius: 20px 20px 20px 20px;  
     }
     .easy_btn-konstantin, .normal_btn-konstantin, .hard_btn-konstantin{
-      font-weight: 500;
       border: none;
       color: white;
       height: 10%;
       width: 12.0rem;
       margin: 8px;
       padding: 12px;
-      font-size: 1.0rem;
-      border-radius: 0.4rem;
+      font-size: 2.0rem;
+      font-weight: 700;
+      border-radius: 1.4rem;
       margin-bottom: 1.2rem;
       /* box-shadow: grey 5px 8px 5px; */
     }
@@ -339,6 +341,7 @@
   .blink-me-konstantin {
     animation: blinker 3s linear infinite;
     animation-iteration-count: 1;
+    color: #F4628C;
   }
   
   @keyframes blinker {
@@ -426,18 +429,19 @@
     padding: 2.0rem 1.2rem 1.2rem 1.2rem;;
     /* width: 50%; */
     color: #8F8F8F;
-    border-radius: 10px 10px 10px 10px;  
+    border: 5px solid #E9E9E9;
+    border-radius: 20px 20px 20px 20px;  
   }
   .easy_btn-konstantin, .normal_btn-konstantin, .hard_btn-konstantin{
-    font-weight: 500;
     border: none;
     color: white;
     height: 10%;
     width: 9.0rem;
     margin: 8px;
     padding: 12px;
-    font-size: 1.0rem;
-    border-radius: 0.4rem;
+    font-size: 2.0rem;
+    font-weight: 700;
+    border-radius: 1.4rem;
     margin-bottom: 1.2rem;
     /* box-shadow: grey 5px 8px 5px; */
   }
@@ -576,6 +580,7 @@
   .blink-me-konstantin {
     animation: blinker 3s linear infinite;
     animation-iteration-count: 1;
+    color: #F4628C;
   }
   
   @keyframes blinker {
@@ -663,18 +668,19 @@
     padding: 2.0rem 1.2rem 1.2rem 1.2rem;;
     /* width: 50%; */
     color: #8F8F8F;
-    border-radius: 10px 10px 10px 10px;  
+    border: 5px solid #E9E9E9;
+    border-radius: 20px 20px 20px 20px;  
   }
   .easy_btn-konstantin, .normal_btn-konstantin, .hard_btn-konstantin{
-    font-weight: 500;
     border: none;
     color: white;
     height: 10%;
     width: 9.0rem;
     margin: 8px;
     padding: 12px;
-    font-size: 1.0rem;
-    border-radius: 0.4rem;
+    font-size: 2.0rem;
+    font-weight: 700;
+    border-radius: 1.4rem;
     margin-bottom: 1.2rem;
     /* box-shadow: grey 5px 8px 5px; */
   }
